--- a/header.html
+++ b/header.html
@@ -1,1 +1,3 @@
-Hey world, this is the UK version of the app!
+<header id="main-header">
+  Hey world, this is the UK version of the app!
+</header>
